“タイトル変更”

--- a/index.html
+++ b/index.html
@@ -1240,8 +1240,8 @@
 
     <section id="hero">
         <div>
-            <h2>SPINTECHNOLOGYで未来を創造しよう</h2>
-            <p>私たちは技術の力で社会に新たな価値を提供します。</p>
+            <h2>志しむことから全てがはじまる</h2>
+            <p>あなたの未来をSPINTECHNOLOGYで作りませんか？</p>
             <a href="#contact" class="btn">エンジニア採用情報を見る</a>
         </div>
     </section>
@@ -1356,7 +1356,7 @@
                                         <div class="node infra-dept-1">
                                             <i class="fas fa-server department-icon"></i><br>
                                             インフラ部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長:西小野<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1366,7 +1366,7 @@
                                         <div class="node infra-dept-2">
                                             <i class="fas fa-network-wired department-icon"></i><br>
                                             インフラ部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 今井<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1376,7 +1376,7 @@
                                         <div class="node dev-dept">
                                             <i class="fas fa-code department-icon"></i><br>
                                             開発部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 木田<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1386,7 +1386,7 @@
                                         <div class="node consult-dept">
                                             <i class="fas fa-lightbulb department-icon"></i><br>
                                             コンサル部
-                                            <div class="details">部長: 1名<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長: 梅野<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group">エンジニア: 75名</div></li>
@@ -1644,3 +1644,4 @@
 
 </body>
 </html>
+
