“キャリア図変更”

--- a/index.html
+++ b/index.html
@@ -1442,19 +1442,19 @@
 
         <div class="image-gallery">
             <div class="gallery-item">
-                <img src="images/インフラキャリア.png" alt="インフラエンジニアのキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/インフラエンジニア.png" alt="インフラエンジニアのキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">インフラエンジニア キャリアパス</p>
             </div>
             <div class="gallery-item">
-                <img src="images/開発キャリア.png" alt="開発エンジニアのキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/開発エンジニア.png" alt="開発エンジニアのキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">開発エンジニア キャリアパス</p>
             </div>
             <div class="gallery-item">
-                <img src="images/コンサルキャリア.png" alt="コンサルエンジニアのキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/コンサルエンジニア.png" alt="コンサルエンジニアのキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">コンサルエンジニア キャリアパス</p>
             </div>
             <div class="gallery-item">
-                <img src="images/営業キャリア.png" alt="営業職のキャリアパス図" class="content-image" loading="lazy">
+                <img src="images/営業キャリア図.png" alt="営業職のキャリアパス図" class="content-image" loading="lazy">
                 <p class="career-title">営業職 キャリアパス</p>
             </div>
         </div>
