“組織図の部長名削除と問い合わせのリンク先変更”

--- a/index.html
+++ b/index.html
@@ -1329,28 +1329,28 @@
                                         <div class="node engineering" data-aos="slide-up" data-aos-delay="100">
                                             <i class="fas fa-cogs department-icon"></i><br>
                                             エンジニアリング事業部
-                                            <div class="details">責任者: 部長5名<br>エンジニア: 300名</div>
+                                            <div class="details">部長5名<br>エンジニア: 300名</div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="node sales" data-aos="slide-up" data-aos-delay="200">
                                             <i class="fas fa-handshake department-icon"></i><br>
                                             営業部
-                                            <div class="details">責任者: 斎藤<br>営業: 4名</div>
+                                            <div class="details">部長<br>営業: 4名</div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="node hr" data-aos="slide-up" data-aos-delay="300">
                                             <i class="fas fa-users department-icon"></i><br>
                                             人事部
-                                            <div class="details">責任者: 今戸<br>採用: 1名<br>教育: 2名</div>
+                                            <div class="details">部長<br>採用: 1名<br>教育: 2名</div>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="node accounting" data-aos="slide-up" data-aos-delay="400">
                                             <i class="fas fa-calculator department-icon"></i><br>
                                             経理部
-                                            <div class="details">責任者: 石岡</div>
+                                            <div class="details">部長</div>
                                         </div>
                                     </li>
                                 </ul>
@@ -1373,7 +1373,7 @@
                                         <div class="node infra-dept-1" data-aos="slide-up" data-aos-delay="100">
                                             <i class="fas fa-server department-icon"></i><br>
                                             インフラ部
-                                            <div class="details">部長:今井<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group" data-aos="fade-up" data-aos-delay="200">エンジニア: 60名</div></li>
@@ -1383,7 +1383,7 @@
                                         <div class="node infra-dept-2" data-aos="slide-up" data-aos-delay="150">
                                             <i class="fas fa-network-wired department-icon"></i><br>
                                             インフラ部
-                                            <div class="details">部長: 西小野<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group" data-aos="fade-up" data-aos-delay="250">エンジニア: 60名</div></li>
@@ -1393,7 +1393,7 @@
                                         <div class="node dev-dept" data-aos="slide-up" data-aos-delay="200">
                                             <i class="fas fa-code department-icon"></i><br>
                                             開発部
-                                            <div class="details">部長: 木田<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group" data-aos="fade-up" data-aos-delay="300">エンジニア: 60名</div></li>
@@ -1403,7 +1403,7 @@
                                         <div class="node consult-dept" data-aos="slide-up" data-aos-delay="250">
                                             <i class="fas fa-lightbulb department-icon"></i><br>
                                             コンサル部
-                                            <div class="details">部長: 梅野<br>マネジメントメンバー: 4名</div>
+                                            <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group" data-aos="fade-up" data-aos-delay="350">エンジニア: 60名</div></li>
@@ -1413,7 +1413,7 @@
                                         <div class="node data-science-dept" data-aos="slide-up" data-aos-delay="300">
                                             <i class="fas fa-chart-line department-icon"></i><br>
                                             データサイエンス部
-                                            <div class="details">部長: 冨澤<br>マネジメントメンバー: 2名</div>
+                                            <div class="details">部長<br>マネジメントメンバー: 2名</div>
                                         </div>
                                         <ul>
                                             <li><div class="node engineer-group" data-aos="fade-up" data-aos-delay="400">エンジニア: 60名</div></li>
@@ -1616,7 +1616,7 @@
     <section id="contact" data-aos="fade-up">
         <h2>14. 採用情報</h2>
         <ul>
-            <li data-aos="fade-up" data-aos-delay="100">採用情報<br><a href="https://spintechnology.jp/recruit/entry/" target="_blank">https://spintechnology.jp/recruit/entry/</a></li>
+            <li data-aos="fade-up" data-aos-delay="100">採用情報<br><a href="https://spintechnology.jp/" target="_blank">https://spintechnology.jp/</a></li>
         </ul>
         <h4 class="contact-call-to-action" data-aos="fade-up" data-aos-delay="150">ご質問があればお気軽にご連絡ください。</h4>
             </section>
