--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
         <dl>
             <dt>会社名</dt><dd>株式会社 SPIN TECHNOLOGY</dd>
             <dt>設立年</dt><dd>2021年9月1日</dd>
-            <dt>代表者</dt><dd>岡田圭佑</dd>
+            <dt>代表者</dt><dd>岡田佳佑</dd>
             <dt>従業員数</dt><dd>300名（正社員）</dd>
             <dt>平均年齢</dt><dd>27歳</dd>
             <dt>事業所</dt><dd>東京都渋谷区 渋谷1-20-1 井門美竹ビル4F</dd>
