“組織文化変更”

--- a/index.html
+++ b/index.html
@@ -1844,10 +1844,15 @@
             <li data-aos="fade-up" data-aos-delay="400">キャリア研修（インフラ・開発・コンサル）</li>
             <li data-aos="fade-up" data-aos-delay="450">マネジメント研修</li>
             <li data-aos="fade-up" data-aos-delay="500">知識研修（インフラ・開発・コンサル）</li>
-            <li data-aos="fade-up" data-aos-delay="550">技術研修（インフラ・開発・コンサル）</li>
+            <li data-aos="fade-up" data-aos-delay="550">技術研修（インフラ・開発・コンサル）</li>ï
         </ol>
+        　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">キャリア研修</p>
         <img src="images/キャリア研修.png" alt="研修風景のイメージ" class="content-image" loading="lazy" data-aos="zoom-in"
             data-aos-delay="300">
+            　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">ビジネス研修</p>
+            <div class="gallery-item" data-aos="fade-up" data-aos-delay="550">
+                <img src="images/" alt="研修の風景２" class="content-image" loading="lazy">
+            </div>
 
         <h3 id="culture-club" data-aos="fade-up" data-aos-delay="500">組織文化（部活）</h3>
         <ol>
@@ -1856,12 +1861,12 @@
             <li data-aos="fade-up" data-aos-delay="450">社員が定着し、共に成長できる場所</li>
         </ol>
         <div class="image-gallery">
+            　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">体育館スポーツ部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="550">
-                　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">体育館スポーツ部</p>
                 <img src="images/部活体育館スポーツ.png" alt="部活動の風景1" class="content-image" loading="lazy">
             </div>
+            　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">スマブラ部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="600">
-                　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">スマブラ部</p>
                 <img src="images/スマブラ部.png" alt="部活動の風景2" class="content-image" loading="lazy">
             </div>
         </div>
@@ -1872,12 +1877,12 @@
                 様々なレクを毎月1〜2回開催</li>
         </ul>
         <div class="image-gallery">
+            　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">BBQレク（年2回：夏開催）</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="700">
-                　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">BBQレク</p>
                 <img src="images/BBQレク.png" alt="レクリエーション風景1" class="content-image" loading="lazy">
             </div>
+            　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">散策レク</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="750">
-                　　　　　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">散策レク</p>
                 <img src="images/散策レク.png" alt="レクリエーション風景2" class="content-image" loading="lazy">
             </div>         
         </div>
@@ -2012,5 +2017,4 @@
     </script>
 
 </body>
-
 </html>
