“部署名変更”

--- a/index.html
+++ b/index.html
@@ -1671,7 +1671,7 @@
                                     <li>
                                         <div class="node infra-dept-1" data-aos="slide-up" data-aos-delay="100">
                                             <i class="fas fa-server department-icon"></i><br>
-                                            インフラ部
+                                            第一部
                                             <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
@@ -1684,7 +1684,7 @@
                                     <li>
                                         <div class="node infra-dept-2" data-aos="slide-up" data-aos-delay="150">
                                             <i class="fas fa-network-wired department-icon"></i><br>
-                                            インフラ部
+                                            第二部
                                             <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
@@ -1697,7 +1697,7 @@
                                     <li>
                                         <div class="node dev-dept" data-aos="slide-up" data-aos-delay="200">
                                             <i class="fas fa-code department-icon"></i><br>
-                                            開発部
+                                            第三部
                                             <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
@@ -1710,7 +1710,7 @@
                                     <li>
                                         <div class="node consult-dept" data-aos="slide-up" data-aos-delay="250">
                                             <i class="fas fa-lightbulb department-icon"></i><br>
-                                            コンサル部
+                                            第四部
                                             <div class="details">部長<br>マネジメントメンバー: 4名</div>
                                         </div>
                                         <ul>
@@ -1723,7 +1723,7 @@
                                     <li>
                                         <div class="node data-science-dept" data-aos="slide-up" data-aos-delay="300">
                                             <i class="fas fa-chart-line department-icon"></i><br>
-                                            データサイエンス部
+                                            第五部
                                             <div class="details">部長<br>マネジメントメンバー: 2名</div>
                                         </div>
                                         <ul>
