“スマホのメニューバー変更”

--- a/index.html
+++ b/index.html
@@ -1616,7 +1616,7 @@
         // ハンバーガーメニューの開閉機能 (JavaScript)
         const hamburger = document.querySelector('.p-hamburger');
         const gNav = document.querySelector('.p-g-nav');
-        const gNavLinks = document.querySelectorAll('.p-g-nav a');
+        const gNavLinks = document.querySelectorAll('.p-g-nav a'); // グローバルナビ内の全てのリンクを取得
     
         // p-header__innerへのposition: relative;の設定はCSSで直接行われているため、
         // ここでのJavaScriptによる操作は不要です。
