--- a/index.html
+++ b/index.html
@@ -1977,7 +1977,7 @@
         </ul>
         <h4 class="contact-call-to-action" data-aos="fade-up" data-aos-delay="150">ご質問があれば、お気軽にお問い合わせ・ご連絡ください。</h4>
         　　　　<div class="qr-code-container" data-aos="zoom-in" data-aos-delay="500">
-            <img src="images/問い合わせ（高畑）QRコード2.jpeg" alt="お問い合わせ用QRコード" class="content-image" loading="lazy">
+            <img src="images/問い合わせ(高畑)QRコード2.jpeg" alt="お問い合わせ用QRコード" class="content-image" loading="lazy">
             <p>スマートフォンでQRコードを読み取り、お問い合わせフォームへ進んでください</p>
         </div>
     </section>
