--- a/index.html
+++ b/index.html
@@ -1880,7 +1880,7 @@
                 <img src="images/ダーツ部.jpeg" alt="活動動２の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
             <p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">野球部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="550">
-                    <img src="images/野球部.jpeg" alt="部活動１の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
+                    <img src="images/ダーツ部.jpeg" alt="部活動１の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
             </div>
     
         <h3 id="culture-recreation" data-aos="fade-up" data-aos-delay="650">組織文化（レクリエーション）</h3>
