--- a/index.html
+++ b/index.html
@@ -1877,10 +1877,10 @@
         <div class="image-gallery">
         　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">ダーツ部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="600">
-                <img src="images/ダーツ部.jpeg" alt="活動動２の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
+                <img src="images/ダーツ.jpeg" alt="活動動２の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
             <p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">野球部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="550">
-                    <img src="images/ダーツ部.jpeg" alt="部活動１の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
+                    <img src="images/野球部.jpeg" alt="部活動１の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
             </div>
     
         <h3 id="culture-recreation" data-aos="fade-up" data-aos-delay="650">組織文化（レクリエーション）</h3>
@@ -1977,7 +1977,7 @@
         </ul>
         <h4 class="contact-call-to-action" data-aos="fade-up" data-aos-delay="150">ご質問があれば、お気軽にお問い合わせ・ご連絡ください。</h4>
         　　　　<div class="qr-code-container" data-aos="zoom-in" data-aos-delay="500">
-            <img src="images/問い合わせ（高畑）QRコード2.jpeg" alt="お問い合わせ用QRコード" class="content-image" loading="lazy">
+            <img src="images/問い合わせQR2.jpeg" alt="お問い合わせ用QRコード" class="content-image" loading="lazy">
             <p>スマートフォンでQRコードを読み取り、お問い合わせフォームへ進んでください</p>
         </div>
     </section>
