--- a/index.html
+++ b/index.html
@@ -1877,7 +1877,7 @@
         <div class="image-gallery">
         　　<p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">ダーツ部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="600">
-                <img src="images/ダーツ.jpeg" alt="活動動２の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
+                <img src="images/darts.jpeg" alt="活動動２の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
             <p class="future-call-to-action" data-aos="zoom-in" data-aos-delay="200">野球部</p>
             <div class="gallery-item" data-aos="fade-up" data-aos-delay="550">
                     <img src="images/野球部.jpeg" alt="部活動１の風景" class="content-image" loading="lazy" width="600" height="400"> </div>
