“デザイン変更”

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     /* ★変更点: 元の背景設定をコメントアウト */
     /* background: linear-gradient(135deg, #66b3ff, #3366cc); */
     /* ★変更点: 画像背景、繰り返しなし、全面表示、中央配置 */
-    background-image: url('images/PC透かし.jpeg'); /* 添付画像をここに指定 */
+    background-image: url('images/PC透かし2.jpeg'); /* 添付画像をここに指定 */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
