--- a/index.html
+++ b/index.html
@@ -35,16 +35,11 @@
             /* スムーズスクロールの追加 */
         }
 
-        body {
+        /* bodyのデフォルトスタイル（PC向け） */
+body {
     font-family: 'Inter', sans-serif;
-    /* ★変更点: 元の背景設定をコメントアウト */
-    /* background: linear-gradient(135deg, #66b3ff, #3366cc); */
-    /* ★変更点: 画像背景、繰り返しなし、全面表示、中央配置 */
-    background-image: url('images/PC透かし2.jpeg'); /* 添付画像をここに指定 */
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
+    background-color: transparent; /* body自体の背景色は透明に */
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,6 +49,32 @@
     overflow-x: hidden;
     overflow-y: auto;
     padding-top: 130px;
+    position: relative; /* ::before擬似要素の基準にするため */
+    z-index: 1; /* コンテンツが背景の上に表示されるように */
+}
+
+/* ★変更点: bodyの背景として画像とぼかし、カラーリングを適用 (PC・スマホ共通) */
+body::before {
+    content: '';
+    position: fixed; /* 固定背景として */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('images/PC透かし2.jpeg'); /* ここに指定された画像を使用 */
+    background-repeat: no-repeat;
+    background-size: cover; /* 画面全体を覆うように拡大縮小 */
+    background-position: center center;
+    background-attachment: fixed; /* 背景画像を固定 */
+    z-index: -1; /* bodyコンテンツの下に表示されるように */
+
+    /* ぼかし効果 */
+    filter: blur(5px); /* ぼかしの強さを調整してください (例: 3px, 5px, 10px) */
+
+    /* 薄い青紫色のオーバーレイ */
+    background-color: rgba(179, 136, 255, 0.2); /* 薄い青紫色と透明度 */
+    background-blend-mode: overlay; /* 画像と色のブレンドモード */
+    opacity: 0.8; /* 背景全体の透明度を調整して、画像をさらに薄く見せる */
 }
 
         /* ヘッダーのスタイル - 新しいヘッダーに合わせて大幅変更 */
@@ -288,11 +309,10 @@
 
 
         /* section */
-section {
+        section {
     width: 100%;
     max-width: 1200px;
-    /* ★変更点: 背景色を薄い白に半透明で指定 */
-    background-color: rgba(255, 255, 255, 0.8); /* ここを修正 */
+    background-color: rgba(255, 255, 255, 0.8); /* 半透明の白で維持 */
     border-radius: 12px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     padding: 30px;
